# Malam-Trades

./: main.py  mycredentials.json  priceget.py  pyproject.toml  test.py
