[tool.poetry]
name = "MalamTrader"
version = "0.1.0"
description = "a silly little tool to automate my trades while im taking a 9 hour nap during night time on a funny vtuber based stock market simulator game"
authors = ["who knows"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
requests = "^2.28.0"
gspread = "^5.4.0"
oauth2client = "^4.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"